--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     body {
       font-family: system-ui, Segoe UI, Roboto, Arial;
       background: #f8f9fa;
-      margin: 0;
-      padding: 0;
     }
 
     .scanner-container {
@@ -24,7 +22,6 @@
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      display: none; /* hidden until Start Camera */
     }
 
     #video {
@@ -34,13 +31,9 @@
       background: #000;
     }
 
-    /* Scanner overlay */
     .overlay {
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      inset: 0;
       background: rgba(0, 0, 0, 0.4);
       display: flex;
       align-items: center;
@@ -66,18 +59,6 @@
       }
     }
 
-    #controls {
-      margin-top: 15px;
-    }
-
-    pre {
-      background: #fff;
-      padding: 12px;
-      border-radius: 8px;
-      border: 1px solid #eee;
-      white-space: pre-wrap;
-    }
-
     .dot {
       width: 10px;
       height: 10px;
@@ -93,6 +74,24 @@
     .bad {
       background: #ef4444;
     }
+
+    .decoded-card {
+      margin-top: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .decoded-card .card-header {
+      background: linear-gradient(135deg, #28a745, #20c997);
+      color: white;
+      font-weight: bold;
+    }
+
+    .highlight-name {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #155724;
+    }
   </style>
 
   <!-- jsQR and pako -->
@@ -104,7 +103,7 @@
 
   <h2 class="text-center mb-4">Aadhaar — QR Scanner & Decode</h2>
 
-  <div class="scanner-container" id="scannerBox">
+  <div class="scanner-container">
     <video id="video" autoplay playsinline></video>
     <div class="overlay">
       <div class="scanner-box"></div>
@@ -114,7 +113,6 @@
   <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center">
     <button id="startBtn" class="btn btn-success">Start Camera</button>
     <button id="stopBtn" class="btn btn-danger" disabled>Stop Camera</button>
-    <button id="flashBtn" class="btn btn-warning" disabled>Flash On</button>
     <input id="fileInput" type="file" accept="image/*" class="form-control" style="max-width:220px" />
     <button id="resetBtn" class="btn btn-secondary">Reset</button>
     <div class="ms-auto small mt-2">
@@ -122,9 +120,17 @@
     </div>
   </div>
 
-  <h4 class="mt-4">Decoded Output</h4>
-  <pre id="out">(no output yet)</pre>
-  <div id="links" class="mt-2"></div>
+  <!-- Decoded Output -->
+  <div id="decodedCard" class="card decoded-card d-none">
+    <div class="card-header">Decoded Aadhaar Data</div>
+    <div class="card-body">
+      <p class="highlight-name mb-3" id="firstWord">(no output yet)</p>
+      <table class="table table-sm mb-0">
+        <tbody id="outTable"></tbody>
+      </table>
+    </div>
+    <div class="card-footer d-flex gap-2" id="links"></div>
+  </div>
 
   <script>
     /* ---------- Helpers ---------- */
@@ -172,36 +178,28 @@
       const data = {}; FIELD_ORDER.forEach((k, i) => data[k] = values[i] ?? "");
       const SIGN_LEN = 256;
       const sigStart = decompressed.length - SIGN_LEN;
-      if (sigStart <= cursor) throw new Error("Malformed bytes: signature overlaps content");
       let trailerEnd = sigStart;
-      let mobileHash = null, emailHash = null;
       const pres = Number(data.presenceBit || 0);
-      if (pres === 3) {
-        mobileHash = decompressed.slice(trailerEnd - 32, trailerEnd); trailerEnd -= 32;
-        emailHash = decompressed.slice(trailerEnd - 32, trailerEnd); trailerEnd -= 32;
-      } else if (pres === 2) {
-        mobileHash = decompressed.slice(trailerEnd - 32, trailerEnd); trailerEnd -= 32;
-      } else if (pres === 1) {
-        emailHash = decompressed.slice(trailerEnd - 32, trailerEnd); trailerEnd -= 32;
-      }
+      if (pres === 3) { trailerEnd -= 64; }
+      else if (pres === 2 || pres === 1) { trailerEnd -= 32; }
       const photoBytes = decompressed.slice(cursor, trailerEnd);
-      return { data, emailHash, mobileHash, signatureLen: SIGN_LEN, photoBytes };
+      return { data, photoBytes };
     }
 
     /* ---------- Camera / scanning ---------- */
     const video = document.getElementById("video");
     const startBtn = document.getElementById("startBtn");
     const stopBtn = document.getElementById("stopBtn");
-    const flashBtn = document.getElementById("flashBtn");
     const resetBtn = document.getElementById("resetBtn");
-    const outEl = document.getElementById("out");
     const statusText = document.getElementById("statusText");
     const statusDot = document.getElementById("statusDot");
     const links = document.getElementById("links");
     const fileInput = document.getElementById("fileInput");
-    const scannerBox = document.getElementById("scannerBox");
+    const outTable = document.getElementById("outTable");
+    const firstWord = document.getElementById("firstWord");
+    const decodedCard = document.getElementById("decodedCard");
 
-    let stream = null, scanning = false, scanLoopHandle = null, track = null, torchOn = false;
+    let stream = null, scanning = false, scanLoopHandle = null;
     const canvas = document.createElement("canvas");
     const ctx = canvas.getContext("2d");
 
@@ -217,17 +215,12 @@
           video: {
             facingMode: "environment",
             width: { ideal: 1920 },
-            height: { ideal: 1080 },
-            aspectRatio: { ideal: 1.777 }
+            height: { ideal: 1080 }
           },
           audio: false
         });
-        scannerBox.style.display = "block"; // show video only now
         video.srcObject = stream;
         await video.play();
-        track = stream.getVideoTracks()[0];
-        const caps = track.getCapabilities();
-        if (caps.torch) flashBtn.disabled = false;
         setStatus("camera started", true);
         startBtn.disabled = true; stopBtn.disabled = false;
         scanning = true;
@@ -242,24 +235,17 @@
       if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; }
       video.pause(); video.srcObject = null;
-      scannerBox.style.display = "none"; // hide again
-      startBtn.disabled = false; stopBtn.disabled = true; flashBtn.disabled = true;
-      torchOn = false;
+      startBtn.disabled = false; stopBtn.disabled = true;
       setStatus("camera stopped", false);
     }
     startBtn.addEventListener("click", startCamera);
     stopBtn.addEventListener("click", stopCamera);
-    resetBtn.addEventListener("click", () => { outEl.textContent = "(no output yet)"; links.innerHTML = ""; setStatus("idle", false); });
-
-    flashBtn.addEventListener("click", async () => {
-      if (!track) return;
-      try {
-        torchOn = !torchOn;
-        await track.applyConstraints({ advanced: [{ torch: torchOn }] });
-        flashBtn.textContent = torchOn ? "Flash Off" : "Flash On";
-      } catch (e) {
-        alert("Flash not supported: " + e.message);
-      }
+    resetBtn.addEventListener("click", () => {
+      firstWord.textContent = "(no output yet)";
+      outTable.innerHTML = "";
+      links.innerHTML = "";
+      decodedCard.classList.add("d-none");
+      setStatus("idle", false);
     });
 
     fileInput.addEventListener("change", async (ev) => {
@@ -294,11 +280,10 @@
     async function onQRCodeFound(qrStr) {
       setStatus("QR found — decoding...", true);
       scanning = false;
-      if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
+      if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; video.pause(); video.srcObject = null; }
-      scannerBox.style.display = "none"; // hide video after scan
-      startBtn.disabled = false; stopBtn.disabled = true; flashBtn.disabled = true;
-      torchOn = false;
+      startBtn.disabled = false; stopBtn.disabled = true;
+
       try {
         const numeric = (qrStr.match(/[0-9]+/g) || []).join("");
         if (!numeric) throw new Error("No numeric content found in QR");
@@ -306,29 +291,63 @@
         const decompressed = tryDecompress(raw);
         const parsed = parseUidaiBytes(decompressed);
         const d = parsed.data;
+
         const out = {
-          name: d.name || "", dob: d.dob || "", gender: d.gender || "", careOf: d.careOf || "",
-          district: d.district || "", landmark: d.landmark || "", house: d.house || "",
-          location: d.location || "", pincode: d.pincode || "", postOffice: d.postOffice || "",
-          state: d.state || "", street: d.street || "", vtc: d.vtc || ""
+          name: d.name || "",
+          dob: d.dob || "",
+          gender: d.gender || "",
+          careOf: d.careOf || "",
+          district: d.district || "",
+          landmark: d.landmark || "",
+          house: d.house || "",
+          location: d.location || "",
+          pincode: d.pincode || "",
+          postOffice: d.postOffice || "",
+          state: d.state || "",
+          street: d.street || "",
+          vtc: d.vtc || ""
         };
-        let text = ""; for (const k of Object.keys(out)) text += `${k}: ${out[k] ?? ""}\n`;
-        outEl.textContent = text;
+
+        // Show first suitable word
+        firstWord.textContent = out.name || "Scanned";
+
+        // Show full table
+        outTable.innerHTML = "";
+        for (const [k, v] of Object.entries(out)) {
+          if (!v) continue;
+          const row = document.createElement("tr");
+          row.innerHTML = `<th class="text-capitalize">${k}</th><td>${v}</td>`;
+          outTable.appendChild(row);
+        }
+        decodedCard.classList.remove("d-none");
+
+        // Download JSON
+        links.innerHTML = "";
         const jsonBlob = new Blob([JSON.stringify(out, null, 2)], { type: "application/json" });
         const jurl = URL.createObjectURL(jsonBlob);
         const jlink = document.createElement("a");
-        jlink.href = jurl; jlink.download = "aadhaar_decoded.json"; jlink.textContent = "Download JSON"; jlink.className = "btn btn-link";
+        jlink.href = jurl;
+        jlink.download = "aadhaar_decoded.json";
+        jlink.textContent = "Download JSON";
+        jlink.className = "btn btn-sm btn-outline-primary";
         links.appendChild(jlink);
+
+        // Photo link
         if (parsed.photoBytes && parsed.photoBytes.length > 0) {
           const blob = new Blob([parsed.photoBytes], { type: "image/jp2" });
           const url = URL.createObjectURL(blob);
           const a = document.createElement("a");
-          a.href = url; a.download = "aadhaar_photo.jp2"; a.textContent = "Download Photo"; a.className = "btn btn-link";
+          a.href = url;
+          a.download = "aadhaar_photo.jp2";
+          a.textContent = "Download Photo";
+          a.className = "btn btn-sm btn-outline-secondary";
           links.appendChild(a);
         }
+
         setStatus("decoded successfully", true);
       } catch (err) {
-        outEl.textContent = "Error: " + (err.message || String(err));
+        firstWord.textContent = "Error: " + (err.message || String(err));
+        decodedCard.classList.remove("d-none");
         setStatus("decode error", false);
       }
     }
@@ -337,5 +356,4 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
