--- a/aadhar.html
+++ b/aadhar.html
@@ -2,78 +2,134 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Aadhaar — Auto QR Scan & Decode (Local)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <title>Aadhaar — QR Scanner & Decode</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 
   <style>
     body {
-      max-width: 980px;
-      margin: 20px auto;
+      font-family: system-ui, Segoe UI, Roboto, Arial;
+      background: #f8f9fa;
+    }
+
+    .scanner-container {
+      position: relative;
+      max-width: 600px;
+      margin: 30px auto;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
     #video {
       width: 100%;
-      max-height: 480px;
-      border-radius: 8px;
+      height: auto;
+      display: block;
       background: #000;
     }
 
-    pre {
-      white-space: pre-wrap;
-      background: #f8f9fa;
-      padding: 12px;
+    .overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .scanner-box {
+      width: 250px;
+      height: 250px;
+      border: 3px solid #00ff99;
       border-radius: 8px;
-      border: 1px solid #dee2e6;
+      box-shadow: 0 0 20px rgba(0, 255, 150, 0.6);
+      animation: glow 1.5s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        box-shadow: 0 0 10px rgba(0, 255, 150, 0.5);
+      }
+
+      to {
+        box-shadow: 0 0 25px rgba(0, 255, 150, 0.9);
+      }
     }
 
     .dot {
-      width: 12px;
-      height: 12px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
       display: inline-block;
-      margin-left: 8px;
+      margin-left: 6px;
     }
 
     .ok {
-      background: #198754;
+      background: #16a34a;
     }
 
     .bad {
-      background: #dc3545;
+      background: #ef4444;
+    }
+
+    .decoded-card {
+      margin-top: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .decoded-card .card-header {
+      background: linear-gradient(135deg, #28a745, #20c997);
+      color: white;
+      font-weight: bold;
+    }
+
+    .highlight-name {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #155724;
     }
   </style>
+
+  <!-- jsQR and pako -->
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 </head>
 
-<body class="bg-light">
+<body class="container py-4">
 
-  <div class="container">
-    <h2 class="mb-3">Aadhaar — Auto QR Scan & Decode (Local)</h2>
-    <p class="text-muted small">Camera will start automatically. QR detection and decoding happen locally in your
-      browser.</p>
+  <h2 class="text-center mb-4">Aadhaar — QR Scanner & Decode</h2>
 
-    <div class="card mb-3">
-      <div class="card-body text-center">
-        <video id="video" autoplay playsinline class="mb-3"></video>
-        <div class="d-flex flex-wrap gap-2 justify-content-center">
-          <button id="stopBtn" class="btn btn-danger">Stop Camera</button>
-          <input id="fileInput" type="file" accept="image/*" class="form-control-file">
-          <button id="resetBtn" class="btn btn-secondary">Reset</button>
-        </div>
-        <div class="mt-2 d-flex align-items-center justify-content-center">
-          <span>Status: <span id="statusText">idle</span></span>
-          <span id="statusDot" class="dot bad"></span>
-        </div>
-        <div id="errorMsg" class="mt-2 text-danger"></div>
-      </div>
+  <div class="scanner-container">
+    <video id="video" autoplay playsinline></video>
+    <div class="overlay">
+      <div class="scanner-box"></div>
     </div>
+  </div>
 
-    <h4>Decoded Output</h4>
-    <pre id="out">(no output yet)</pre>
+  <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center">
+    <button id="startBtn" class="btn btn-success">Start Camera</button>
+    <button id="stopBtn" class="btn btn-danger" disabled>Stop Camera</button>
+    <input id="fileInput" type="file" accept="image/*" class="form-control" style="max-width:220px" />
+    <button id="resetBtn" class="btn btn-secondary">Reset</button>
+    <div class="ms-auto small mt-2">
+      Status: <span id="statusText">idle</span> <span id="statusDot" class="dot bad"></span>
+    </div>
+  </div>
+
+  <!-- Decoded Output -->
+  <div id="decodedCard" class="card decoded-card d-none">
+    <div class="card-header">Decoded Aadhaar Data</div>
+    <div class="card-body">
+      <p class="highlight-name mb-3" id="firstWord">(no output yet)</p>
+      <table class="table table-sm mb-0">
+        <tbody id="outTable"></tbody>
+      </table>
+    </div>
+    <div class="card-footer d-flex gap-2" id="links"></div>
   </div>
 
   <script>
@@ -92,13 +148,13 @@
     function tryDecompress(u8) {
       try { return pako.ungzip(u8); } catch (e) { }
       try { return pako.inflate(u8); } catch (e) { }
-      throw new Error("Decompress failed");
+      throw new Error("Decompress failed (not gzip/zlib).");
     }
     function splitUntilFF(u8, count) {
       const parts = []; let cursor = 0;
       for (let i = 0; i < count; i++) {
         const idx = u8.indexOf(0xFF, cursor);
-        if (idx === -1) throw new Error("Missing 0xFF");
+        if (idx === -1) throw new Error("Missing 0xFF delimiters while parsing text fields");
         parts.push(u8.slice(cursor, idx));
         cursor = idx + 1;
       }
@@ -108,24 +164,40 @@
       const FIELD_17 = ["version", "presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
       const FIELD_16 = ["presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
       let partsInfo, FIELD_ORDER;
-      try { partsInfo = splitUntilFF(decompressed, FIELD_17.length); FIELD_ORDER = FIELD_17; }
-      catch (e) { partsInfo = splitUntilFF(decompressed, FIELD_16.length); FIELD_ORDER = FIELD_16; }
+      try {
+        partsInfo = splitUntilFF(decompressed, FIELD_17.length);
+        FIELD_ORDER = FIELD_17;
+      } catch (e) {
+        partsInfo = splitUntilFF(decompressed, FIELD_16.length);
+        FIELD_ORDER = FIELD_16;
+      }
       const td = new TextDecoder("iso-8859-1");
       const parts = partsInfo.parts;
+      const cursor = partsInfo.cursor;
       const values = parts.map((p, i) => i === 0 ? td.decode(p).trim() : td.decode(p));
       const data = {}; FIELD_ORDER.forEach((k, i) => data[k] = values[i] ?? "");
-      return { data };
+      const SIGN_LEN = 256;
+      const sigStart = decompressed.length - SIGN_LEN;
+      let trailerEnd = sigStart;
+      const pres = Number(data.presenceBit || 0);
+      if (pres === 3) { trailerEnd -= 64; }
+      else if (pres === 2 || pres === 1) { trailerEnd -= 32; }
+      const photoBytes = decompressed.slice(cursor, trailerEnd);
+      return { data, photoBytes };
     }
 
-    /* ---------- Camera & Scanning ---------- */
+    /* ---------- Camera / scanning ---------- */
     const video = document.getElementById("video");
+    const startBtn = document.getElementById("startBtn");
     const stopBtn = document.getElementById("stopBtn");
     const resetBtn = document.getElementById("resetBtn");
-    const outEl = document.getElementById("out");
     const statusText = document.getElementById("statusText");
     const statusDot = document.getElementById("statusDot");
+    const links = document.getElementById("links");
     const fileInput = document.getElementById("fileInput");
-    const errorMsg = document.getElementById("errorMsg");
+    const outTable = document.getElementById("outTable");
+    const firstWord = document.getElementById("firstWord");
+    const decodedCard = document.getElementById("decodedCard");
 
     let stream = null, scanning = false, scanLoopHandle = null;
     const canvas = document.createElement("canvas");
@@ -137,34 +209,43 @@
     }
 
     async function startCamera() {
-      errorMsg.textContent = "";
+      if (stream) return;
       try {
-        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio: false });
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: {
+            facingMode: "environment",
+            width: { ideal: 1920 },
+            height: { ideal: 1080 }
+          },
+          audio: false
+        });
         video.srcObject = stream;
         await video.play();
         setStatus("camera started", true);
+        startBtn.disabled = true; stopBtn.disabled = false;
         scanning = true;
         scanLoop();
       } catch (e) {
         setStatus("camera error", false);
-        errorMsg.textContent = "Camera start failed: " + e.message;
-        console.error(e);
+        alert("Camera start failed: " + e.message);
       }
     }
-
     function stopCamera() {
       scanning = false;
       if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; }
       video.pause(); video.srcObject = null;
+      startBtn.disabled = false; stopBtn.disabled = true;
       setStatus("camera stopped", false);
     }
-
+    startBtn.addEventListener("click", startCamera);
+    stopBtn.addEventListener("click", stopCamera);
     resetBtn.addEventListener("click", () => {
-      outEl.textContent = "(no output yet)";
+      firstWord.textContent = "(no output yet)";
+      outTable.innerHTML = "";
+      links.innerHTML = "";
+      decodedCard.classList.add("d-none");
       setStatus("idle", false);
-      errorMsg.textContent = "";
-      startCamera();
     });
 
     fileInput.addEventListener("change", async (ev) => {
@@ -176,8 +257,8 @@
         ctx.drawImage(img, 0, 0);
         const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         const code = jsQR(imgData.data, imgData.width, imgData.height);
-        if (code && code.data) await onQRCodeFound(code.data);
-        else errorMsg.textContent = "No QR detected in image.";
+        if (code && code.data) { await onQRCodeFound(code.data); }
+        else { alert("No QR detected in image."); }
       };
       img.src = URL.createObjectURL(f);
     });
@@ -185,7 +266,8 @@
     async function scanLoop() {
       if (!scanning) return;
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        canvas.width = video.videoWidth; canvas.height = video.videoHeight;
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         const code = jsQR(imgData.data, imgData.width, imgData.height, { inversionAttempts: "attemptBoth" });
@@ -198,8 +280,10 @@
     async function onQRCodeFound(qrStr) {
       setStatus("QR found — decoding...", true);
       scanning = false;
-      if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
+      if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; video.pause(); video.srcObject = null; }
+      startBtn.disabled = false; stopBtn.disabled = true;
+
       try {
         const numeric = (qrStr.match(/[0-9]+/g) || []).join("");
         if (!numeric) throw new Error("No numeric content found in QR");
@@ -207,27 +291,69 @@
         const decompressed = tryDecompress(raw);
         const parsed = parseUidaiBytes(decompressed);
         const d = parsed.data;
+
         const out = {
-          name: d.name || "", dob: d.dob || "", gender: d.gender || "", careOf: d.careOf || "",
-          district: d.district || "", landmark: d.landmark || "", house: d.house || "", location: d.location || "",
-          pincode: d.pincode || "", postOffice: d.postOffice || "", state: d.state || "", street: d.street || "",
-          subDistrict: d.subDistrict || "", vtc: d.vtc || ""
+          name: d.name || "",
+          dob: d.dob || "",
+          gender: d.gender || "",
+          careOf: d.careOf || "",
+          district: d.district || "",
+          landmark: d.landmark || "",
+          house: d.house || "",
+          location: d.location || "",
+          pincode: d.pincode || "",
+          postOffice: d.postOffice || "",
+          state: d.state || "",
+          street: d.street || "",
+          vtc: d.vtc || ""
         };
-        let text = "";
-        for (const k of Object.keys(out)) text += `${k}: ${out[k] ?? ""}\n`;
-        outEl.textContent = text;
+
+        // Show first suitable word
+        firstWord.textContent = out.name || "Scanned";
+
+        // Show full table
+        outTable.innerHTML = "";
+        for (const [k, v] of Object.entries(out)) {
+          if (!v) continue;
+          const row = document.createElement("tr");
+          row.innerHTML = `<th class="text-capitalize">${k}</th><td>${v}</td>`;
+          outTable.appendChild(row);
+        }
+        decodedCard.classList.remove("d-none");
+
+        // Download JSON
+        links.innerHTML = "";
+        const jsonBlob = new Blob([JSON.stringify(out, null, 2)], { type: "application/json" });
+        const jurl = URL.createObjectURL(jsonBlob);
+        const jlink = document.createElement("a");
+        jlink.href = jurl;
+        jlink.download = "aadhaar_decoded.json";
+        jlink.textContent = "Download JSON";
+        jlink.className = "btn btn-sm btn-outline-primary";
+        links.appendChild(jlink);
+
+        // Photo link
+        if (parsed.photoBytes && parsed.photoBytes.length > 0) {
+          const blob = new Blob([parsed.photoBytes], { type: "image/jp2" });
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement("a");
+          a.href = url;
+          a.download = "aadhaar_photo.jp2";
+          a.textContent = "Download Photo";
+          a.className = "btn btn-sm btn-outline-secondary";
+          links.appendChild(a);
+        }
+
         setStatus("decoded successfully", true);
       } catch (err) {
-        outEl.textContent = "Error: " + (err?.message || String(err));
+        firstWord.textContent = "Error: " + (err.message || String(err));
+        decodedCard.classList.remove("d-none");
         setStatus("decode error", false);
-        console.error(err);
       }
     }
-
-    // Start camera automatically on page load
-    startCamera();
-    stopBtn.addEventListener("click", stopCamera);
   </script>
-</body>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
