--- a/aadhar.html
+++ b/aadhar.html
@@ -6,7 +6,6 @@
   <title>Aadhaar — QR Scanner & Decode</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -27,7 +26,7 @@
     #video {
       width: 100%;
       height: auto;
-      display: block;
+      display: none;
       background: #000;
     }
 
@@ -50,30 +49,13 @@
     }
 
     @keyframes glow {
-      from {
-        box-shadow: 0 0 10px rgba(0, 255, 150, 0.5);
-      }
-
-      to {
-        box-shadow: 0 0 25px rgba(0, 255, 150, 0.9);
-      }
+      from { box-shadow: 0 0 10px rgba(0, 255, 150, 0.5); }
+      to { box-shadow: 0 0 25px rgba(0, 255, 150, 0.9); }
     }
 
-    .dot {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      display: inline-block;
-      margin-left: 6px;
-    }
-
-    .ok {
-      background: #16a34a;
-    }
-
-    .bad {
-      background: #ef4444;
-    }
+    .dot { width: 10px; height: 10px; border-radius: 50%; display: inline-block; margin-left: 6px; }
+    .ok { background: #16a34a; }
+    .bad { background: #ef4444; }
 
     .decoded-card {
       margin-top: 20px;
@@ -94,7 +76,6 @@
     }
   </style>
 
-  <!-- jsQR and pako -->
   <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
 </head>
@@ -110,7 +91,7 @@
     </div>
   </div>
 
-  <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center">
+  <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center mt-3">
     <button id="startBtn" class="btn btn-success">Start Camera</button>
     <button id="stopBtn" class="btn btn-danger" disabled>Stop Camera</button>
     <input id="fileInput" type="file" accept="image/*" class="form-control" style="max-width:220px" />
@@ -120,7 +101,6 @@
     </div>
   </div>
 
-  <!-- Decoded Output -->
   <div id="decodedCard" class="card decoded-card d-none">
     <div class="card-header">Decoded Aadhaar Data</div>
     <div class="card-body">
@@ -133,7 +113,6 @@
   </div>
 
   <script>
-    /* ---------- Helpers ---------- */
     function bigIntDecimalToBytes(decStr) {
       decStr = (decStr || "").replace(/\D/g, '');
       if (!decStr) return new Uint8Array([]);
@@ -145,11 +124,13 @@
       for (let i = 0; i < u8.length; i++) u8[i] = Number("0x" + hex.substr(i * 2, 2));
       return u8;
     }
+
     function tryDecompress(u8) {
       try { return pako.ungzip(u8); } catch (e) { }
       try { return pako.inflate(u8); } catch (e) { }
       throw new Error("Decompress failed (not gzip/zlib).");
     }
+
     function splitUntilFF(u8, count) {
       const parts = []; let cursor = 0;
       for (let i = 0; i < count; i++) {
@@ -160,17 +141,13 @@
       }
       return { parts, cursor };
     }
+
     function parseUidaiBytes(decompressed) {
       const FIELD_17 = ["version", "presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
       const FIELD_16 = ["presenceBit", "referenceId", "name", "dob", "gender", "careOf", "district", "landmark", "house", "location", "pincode", "postOffice", "state", "street", "subDistrict", "vtc"];
       let partsInfo, FIELD_ORDER;
-      try {
-        partsInfo = splitUntilFF(decompressed, FIELD_17.length);
-        FIELD_ORDER = FIELD_17;
-      } catch (e) {
-        partsInfo = splitUntilFF(decompressed, FIELD_16.length);
-        FIELD_ORDER = FIELD_16;
-      }
+      try { partsInfo = splitUntilFF(decompressed, FIELD_17.length); FIELD_ORDER = FIELD_17; }
+      catch (e) { partsInfo = splitUntilFF(decompressed, FIELD_16.length); FIELD_ORDER = FIELD_16; }
       const td = new TextDecoder("iso-8859-1");
       const parts = partsInfo.parts;
       const cursor = partsInfo.cursor;
@@ -186,18 +163,17 @@
       return { data, photoBytes };
     }
 
-    /* ---------- Camera / scanning ---------- */
     const video = document.getElementById("video");
     const startBtn = document.getElementById("startBtn");
     const stopBtn = document.getElementById("stopBtn");
     const resetBtn = document.getElementById("resetBtn");
     const statusText = document.getElementById("statusText");
     const statusDot = document.getElementById("statusDot");
-    const links = document.getElementById("links");
     const fileInput = document.getElementById("fileInput");
     const outTable = document.getElementById("outTable");
     const firstWord = document.getElementById("firstWord");
     const decodedCard = document.getElementById("decodedCard");
+    const links = document.getElementById("links");
 
     let stream = null, scanning = false, scanLoopHandle = null;
     const canvas = document.createElement("canvas");
@@ -220,70 +196,44 @@
           audio: false
         });
         video.srcObject = stream;
+        video.style.display = "block";
         await video.play();
-        setStatus("camera started", true);
-        startBtn.disabled = true; stopBtn.disabled = false;
         scanning = true;
+        startBtn.disabled = true; stopBtn.disabled = false;
+        setStatus("camera started", true);
         scanLoop();
       } catch (e) {
         setStatus("camera error", false);
         alert("Camera start failed: " + e.message);
       }
     }
+
     function stopCamera() {
       scanning = false;
-      if (scanLoopHandle) { cancelAnimationFrame(scanLoopHandle); scanLoopHandle = null; }
+      if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
       if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; }
-      video.pause(); video.srcObject = null;
+      video.pause(); video.srcObject = null; video.style.display = "none";
       startBtn.disabled = false; stopBtn.disabled = true;
       setStatus("camera stopped", false);
     }
-    startBtn.addEventListener("click", startCamera);
-    stopBtn.addEventListener("click", stopCamera);
-    resetBtn.addEventListener("click", () => {
-      firstWord.textContent = "(no output yet)";
-      outTable.innerHTML = "";
-      links.innerHTML = "";
-      decodedCard.classList.add("d-none");
-      setStatus("idle", false);
-    });
-
-    fileInput.addEventListener("change", async (ev) => {
-      if (!ev.target.files || !ev.target.files[0]) return;
-      const f = ev.target.files[0];
-      const img = new Image();
-      img.onload = async () => {
-        canvas.width = img.width; canvas.height = img.height;
-        ctx.drawImage(img, 0, 0);
-        const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        const code = jsQR(imgData.data, imgData.width, imgData.height);
-        if (code && code.data) { await onQRCodeFound(code.data); }
-        else { alert("No QR detected in image."); }
-      };
-      img.src = URL.createObjectURL(f);
-    });
 
     async function scanLoop() {
       if (!scanning) return;
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
+        canvas.width = video.videoWidth; canvas.height = video.videoHeight;
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         const code = jsQR(imgData.data, imgData.width, imgData.height, { inversionAttempts: "attemptBoth" });
         if (code && code.data) { await onQRCodeFound(code.data); return; }
-        else { setStatus("scanning...", true); }
+        setStatus("scanning...", true);
       }
       scanLoopHandle = requestAnimationFrame(scanLoop);
     }
 
     async function onQRCodeFound(qrStr) {
-      setStatus("QR found — decoding...", true);
       scanning = false;
       if (scanLoopHandle) cancelAnimationFrame(scanLoopHandle);
-      if (stream) { stream.getTracks().forEach(t => t.stop()); stream = null; video.pause(); video.srcObject = null; }
-      startBtn.disabled = false; stopBtn.disabled = true;
-
+      stopCamera();
       try {
         const numeric = (qrStr.match(/[0-9]+/g) || []).join("");
         if (!numeric) throw new Error("No numeric content found in QR");
@@ -308,40 +258,18 @@
           vtc: d.vtc || ""
         };
 
-        // Show first suitable word
         firstWord.textContent = out.name || "Scanned";
-
-        // Show full table
         outTable.innerHTML = "";
-        for (const [k, v] of Object.entries(out)) {
-          if (!v) continue;
-          const row = document.createElement("tr");
-          row.innerHTML = `<th class="text-capitalize">${k}</th><td>${v}</td>`;
-          outTable.appendChild(row);
-        }
+        for (const [k, v] of Object.entries(out)) { if (!v) continue; const row = document.createElement("tr"); row.innerHTML = `<th class="text-capitalize">${k}</th><td>${v}</td>`; outTable.appendChild(row); }
         decodedCard.classList.remove("d-none");
 
-        // Download JSON
         links.innerHTML = "";
         const jsonBlob = new Blob([JSON.stringify(out, null, 2)], { type: "application/json" });
-        const jurl = URL.createObjectURL(jsonBlob);
-        const jlink = document.createElement("a");
-        jlink.href = jurl;
-        jlink.download = "aadhaar_decoded.json";
-        jlink.textContent = "Download JSON";
-        jlink.className = "btn btn-sm btn-outline-primary";
-        links.appendChild(jlink);
+        const jlink = document.createElement("a"); jlink.href = URL.createObjectURL(jsonBlob); jlink.download = "aadhaar_decoded.json"; jlink.textContent = "Download JSON"; jlink.className = "btn btn-sm btn-outline-primary"; links.appendChild(jlink);
 
-        // Photo link
         if (parsed.photoBytes && parsed.photoBytes.length > 0) {
           const blob = new Blob([parsed.photoBytes], { type: "image/jp2" });
-          const url = URL.createObjectURL(blob);
-          const a = document.createElement("a");
-          a.href = url;
-          a.download = "aadhaar_photo.jp2";
-          a.textContent = "Download Photo";
-          a.className = "btn btn-sm btn-outline-secondary";
-          links.appendChild(a);
+          const a = document.createElement("a"); a.href = URL.createObjectURL(blob); a.download = "aadhaar_photo.jp2"; a.textContent = "Download Photo"; a.className = "btn btn-sm btn-outline-secondary"; links.appendChild(a);
         }
 
         setStatus("decoded successfully", true);
@@ -351,9 +279,32 @@
         setStatus("decode error", false);
       }
     }
+
+    startBtn.addEventListener("click", startCamera);
+    stopBtn.addEventListener("click", stopCamera);
+    resetBtn.addEventListener("click", () => {
+      firstWord.textContent = "(no output yet)";
+      outTable.innerHTML = "";
+      links.innerHTML = "";
+      decodedCard.classList.add("d-none");
+      setStatus("idle", false);
+    });
+
+    fileInput.addEventListener("change", async ev => {
+      if (!ev.target.files || !ev.target.files[0]) return;
+      const img = new Image();
+      img.onload = async () => {
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+        const code = jsQR(ctx.getImageData(0, 0, canvas.width, canvas.height).data, canvas.width, canvas.height);
+        if (code && code.data) await onQRCodeFound(code.data);
+        else alert("No QR detected in image.");
+      };
+      img.src = URL.createObjectURL(ev.target.files[0]);
+    });
   </script>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
